# matrices

./: CMakeLists.txt  README.md  main.cpp
src/: GaussianElimination.cpp  GaussianElimination.h  Matrix.cpp  Matrix.h  MultipleOperation.cpp  MultipleOperation.h  SingleOperation.cpp  SingleOperation.h  SpecialMatrix.cpp  SpecialMatrix.h
