cmake_minimum_required(VERSION 3.15)
project(untitled7)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled7 main.cpp src/MultipleOperation.cpp src/SpecialMatrix.cpp src/SingleOperation.cpp src/GaussianElimination.cpp src/Matrix.cpp src/GaussianElimination.h src/Matrix.h src/MultipleOperation.h src/SingleOperation.h src/SpecialMatrix.h)